<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Paranoid -->
    <string name="paranoid_dashboard_title">Extended Hub</string>

    <string name="category_name_network_traffic">Network traffic</string>
    <string name="category_name_battery_styles">Battery styles</string>
    <string name="category_name_qs_styles">QS styles</string>
    <string name="category_name_lockscreen">Lockscreen</string>
    <string name="category_name_performance">Performance</string>

    <!-- Status bar - Network Traffic -->
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Show current network traffic levels in the status bar</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_units_title">Traffic measurement units</string>
    <string name="network_traffic_units_bits" translatable="false">kbps, Mbps, Gbps</string>
    <string name="network_traffic_units_bytes" translatable="false">kB/s, MB/s, GB/s</string>

    <!-- Battery Styles -->
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape_ios16">Icon landscape (iOS 16)</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_filled_circle">Filled circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>

    <!-- QS tile shape -->
    <string name="qs_tile_shape">QS tile shape</string>
    <string name="qs_tile_round">Round</string>
    <string name="qs_tile_rect">Rounded Rectangle</string>
    <string name="qs_tile_mix">Mix</string>

    <!-- QS style -->
    <string name="qs_style_title">QS Panel style</string>
    <string name="qs_style_default">Android Stock</string>
    <string name="qs_style_round">Android 11</string>

    <!-- QS transparency -->
    <string name="qs_transparency_title">QS background transparency</string>
    <string name="qs_transparency_summary">Set transparency level for QS background</string>

    <!-- Lock screen cover art -->
    <string name="lockscreen_media_art_title">Media cover art</string>
    <string name="lockscreen_media_art_summary">Show media cover art on lockscreen</string>

    <!-- QTI BoostFramework -->
    <string name="qti_boost_framework_title">QTI boost framework</string>
    <string name="qti_boost_framework_summary">Apply CPU/GPU boost on UI tasks to reduce jank. Reboot is needed</string>

    <!-- Secure lock screen power menu -->
    <string name="power_menu_lock_screen_secure_title">Power menu</string>
    <string name="power_menu_lock_screen_secure_summary">Interact with power menu on secured lockscreen without authentication</string>

    <!-- Secure lock screen QS -->
    <string name="qs_lock_screen_secure_title">Quick settings</string>
    <string name="qs_lock_screen_secure_summary">Interact with quick settings on secured lockscreen without authentication</string>

</resources>
